z-index fix

--- a/style/style.css
+++ b/style/style.css
@@ -65,9 +65,9 @@ html, body {
 .header-page {
     position: sticky;
     top:0;
-    z-index: 1500;
     width: 100%;
     height: 70px;
+    z-index:1;
     display:flex;
     flex-direction: row;
     align-items: center;
